[package]
name = "beanstalkclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = ">= 1.0.158", features = ["derive", "rc"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
serde_yaml = "0.9"
log = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
regex = "1"
fastrand = "2"
