[package]
name = "mamenoki"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Complete implementation of a Beanstalkd client based on the Tokio runtime"
homepage = "https://github.com/withings/mamenoki"
repository = "https://github.com/withings/mamenoki"
readme = "README.md"
keywords = ["client", "beanstalkd", "tokio", "asynchronous"]

[dependencies]
serde = { version = ">= 1.0.158", features = ["derive", "rc"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
serde_yaml = "0.9"
log = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
regex = "1"
fastrand = "2"
